# wordbase

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  NOTES.md  README.md  _typos.toml  clippy.toml  flake.nix  justfile  records.html  rust-toolchain.toml  sample.txt  test.html
crates/jmdict-furigana/: Cargo.toml  README.md
crates/jmdict-furigana/src/: lib.rs
crates/wordbase/: Cargo.toml
crates/wordbase-api/: Cargo.toml  README.md  uniffi.toml
crates/wordbase-api/src/: imp.rs  lib.rs  norm_string.rs  protocol.rs  term.rs
crates/wordbase-api/src/dict/: jpn.rs  mod.rs  yomichan_audio.rs
crates/wordbase-app/: Cargo.toml
crates/wordbase-app/src/: main.blp  main.rs
crates/wordbase-app/src/manager/: ui.blp  ui.rs
crates/wordbase-app/src/overlay/: mod.rs  ui.blp
crates/wordbase-app/src/platform/: mod.rs  wayland.rs
crates/wordbase-app/src/popup/: mod.rs
crates/wordbase-app/src/ui/: bkp.blp  overview.blp  overview.rs  settings.blp  settings.rs
crates/wordbase-cli/: Cargo.toml
crates/wordbase-cli/src/: anki.rs  dict.rs  lookup.rs  main.rs  profile.rs  query.rs
crates/wordbase-client-tokio/: Cargo.toml
crates/wordbase-client-tokio/src/: lib.rs
crates/wordbase-desktop/: Cargo.toml  README.md  build.rs
crates/wordbase-desktop/src/: _default_theme.css  default_theme.css  group.rs  html.rs  io.github.aecsocket.Wordbase.gschema.xml  main.rs  overlay.rs  popup.rs  record_view.rs  render.rs  state.rs  theme.rs
crates/wordbase-desktop/src/manager/: dictionaries.rs  dictionary_row.blp  dictionary_row.rs  error_dialog.blp  error_dialog.rs  mod.rs  ui.blp  ui.rs
crates/wordbase-desktop/src/overlay/: mod.rs  ui.blp  ui.rs
crates/wordbase-desktop/src/platform/: mod.rs  noop.rs  wayland.rs
crates/wordbase-desktop/src/popup/: mod.rs  ui.blp  ui.rs
crates/wordbase-desktop/src/record/: mod.rs  render.rs  view.rs
crates/wordbase-engine/: Cargo.toml
crates/wordbase-engine-cli/: Cargo.toml
crates/wordbase-engine-cli/src/: anki.rs  dict.rs  lookup.rs  main.rs  profile.rs
crates/wordbase-engine-sys/: Cargo.toml
crates/wordbase-engine-sys/src/: lib.rs
crates/wordbase-engine/examples/: render.rs
crates/wordbase-engine/migrations/: 20250516142906_setup.sql
crates/wordbase-engine/src/: anki.rs  db.rs  dictionary.rs  html.rs  lib.rs  lookup.rs  platform.rs  profile.rs  server.rs  texthook.rs
crates/wordbase-engine/src/anki/: client.rs  mod.rs  note.rs  request.rs
crates/wordbase-engine/src/db/: dictionary.rs  mod.rs  profile.rs  schema.sql  setup.sql  term.rs
crates/wordbase-engine/src/deinflect/: lindera.rs  mod.rs
crates/wordbase-engine/src/import/: mod.rs  yomichan_audio.rs  yomitan.rs
crates/wordbase-engine/src/lang/: jpn.rs
crates/wordbase-engine/src/lookup/: mod.rs
crates/wordbase-gtk/: Cargo.toml
crates/wordbase-gtk-ui/: Cargo.toml
crates/wordbase-gtk-ui/src/: _main.rs  dictionary.blp  dictionary.rs  glossary.css  lib.rs  main.rs
crates/wordbase-gtk-ui/src/ui/: frequency_tag.rs  glossary_group.rs  glossary_tag.blp  glossary_tag.rs  lookup.blp  mod.rs  style.css  term_meta.rs
crates/wordbase-gtk/src/: _format.rs  glossary.rs  lib.rs  main.rs  record.rs
crates/wordbase-gtk/src/format/: yomitan.rs
crates/wordbase-gtk/src/lang/: jp.rs
crates/wordbase-gtk/src/ui/: dictionary.blp  glossary_group.blp  glossary_row.rs  glossary_tag.rs  mod.rs  term_meta.blp  term_meta.rs
crates/wordbase-html/: Cargo.toml
crates/wordbase-html/src/: lib.rs
crates/wordbase-popup-gtk/: Cargo.toml
crates/wordbase-popup-gtk/src/: dictionary.blp  dictionary.rs  format.rs  glossary.css  main.rs  structured.rs
crates/wordbase-popup-gtk/src/ui/: dictionary.blp  dictionary.rs  dictionary_popup.blp  dictionary_popup.rs  entry_meta.blp  entry_meta.rs  frequency_tag.blp  frequency_tag.rs  full_dictionary.blp  glossaries.blp  glossaries.rs  glossary_group.rs  glossary_page.blp  glossary_page.rs  glossary_row.blp  glossary_row.rs  glossary_set.blp  glossary_set.rs  glossary_tag.rs  lookup.blp  lookup.rs  mod.rs  pitch.blp  style.css  term_meta.blp  term_meta.rs
crates/wordbase-server/: Cargo.toml
crates/wordbase-server/examples/: headless.rs
crates/wordbase-server/src/: anki.rs  db.rs  dict.rs  dictionary.rs  format.rs  hook_pull.rs  import.rs  lib.rs  lookup.rs  main.rs  mecab.rs  popup.rs  profile.rs  record.rs  server.rs  setup_db.sql  term.rs  texthooker.rs  textractor.rs  websocket.rs
crates/wordbase-server/src/db/: config.rs  dictionary.rs  mod.rs  term.rs
crates/wordbase-server/src/format/: yomitan.rs
crates/wordbase-server/src/import/: mod.rs  yomitan.rs
crates/wordbase-server/src/lookup/: mod.rs
crates/wordbase-server/src/platform/: mod.rs  noop.rs  wayland.rs
crates/wordbase-server/src/popup/: mod.rs  noop.rs  wayland.rs
crates/wordbase-sys/: Cargo.toml
crates/wordbase-sys/src/: lib.rs
crates/wordbase-texthooker-server/: Cargo.toml
crates/wordbase-texthooker-server/src/: main.rs
crates/wordbase/examples/: render.rs  sqlite_bench.rs
crates/wordbase/migrations/: 20250516142906_setup.sql  20250524085940_optimize_remove.sql
crates/wordbase/src/: _protocol.rs  anki.rs  content.rs  db.rs  deconjugate.rs  dict.rs  dictionary.rs  glossary.rs  hook.rs  imp.rs  jp.rs  lang.rs  lib.rs  lookup.rs  profile.rs  protocol.rs  record.rs  records.html  render.rs  request.rs  response.rs  schema.rs  texthook.rs  ty.rs  util.rs
crates/wordbase/src/anki/: note.rs
crates/wordbase/src/deinflect/: latin.rs  lindera.rs  mod.rs
crates/wordbase/src/dict/: mod.rs  yomichan_audio.rs
crates/wordbase/src/format/: mod.rs
crates/wordbase/src/import/: mod.rs  (+1 more)
old_crates/bookhook/: Cargo.toml
old_crates/bookhook-buddy/: Cargo.toml
old_crates/bookhook-buddy/src/: exstatic.rs  main.rs  popup.rs
old_crates/wordbase-app/: Cargo.toml
old_crates/wordbase-app/src/: main.rs
old_crates/wordbase-client-tokio/: Cargo.toml
old_crates/wordbase-client-tokio/src/: lib.rs
wip/wordbase-ankiconnect/: Cargo.toml  README.md
wip/wordbase-ankiconnect/src/: request.rs
wip/wordbase-server/: Cargo.toml
wip_crates/wordbase-server/: Cargo.toml
(+258 files in other folders)
