[workspace]
members  = ["crates/*"]
resolver = "3"

[workspace.package]
authors      = ["aecsocket <aecsocket@tutanota.com>"]
categories   = []
edition      = "2024"
keywords     = []
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/aecsocket/wordbase"
rust-version = "1.85.0"

[workspace.lints.rust]
missing_docs    = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(fuzzing)"] }

[workspace.lints.clippy]
all      = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

unwrap_used = "warn"

cast_precision_loss     = "allow"
missing_const_for_fn    = "allow"
module_name_repetitions = "allow"
struct_field_names      = "allow"
too_many_arguments      = "allow"
too_many_lines          = "allow"
type_complexity         = "allow"

[workspace.dependencies]
wordbase = { path = "crates/wordbase" }
# wordbase-ankiconnect = { path = "crates/wordbase-ankiconnect" }
# wordbase-client-tokio = { path = "crates/wordbase-client-tokio" }
wordbase-engine = { path = "crates/wordbase-engine" }
# wordbase-server = { path = "crates/wordbase-server" }

ankiconnect          = { version = "0.2" }
anyhow               = { version = "1.0" }
ascii_table          = { version = "4.0" }
async-compression    = { version = "0.4" }
async-tar            = { version = "0.5" }
async_zip            = { version = "0.0.17" }
base64               = { version = "0.22" }
bimap                = { version = "0.6" }
blocking             = { version = "1.6" }
bytes                = { version = "1.10" }
bzip2                = { version = "0.5" }
cfg-if               = { version = "1.0" }
charabia             = { version = "0.9.3", default-features = true }
clap                 = { version = "4.5" }
derive_more          = { version = "2.0" }
directories          = { version = "6.0" }
foldhash             = { version = "0.1.4" }
form_urlencoded      = { version = "1.2" }
futures              = { version = "0.3" }
glib                 = { version = "0.20" }
gtk4                 = { version = "0.9" }
html-escape          = { version = "0.2" }
indexmap             = { version = "2.8" }
itertools            = { version = "0.14" }
lindera              = { version = "0.40.2" }
maud                 = { version = "0.27" }
mecab                = { version = "0.1.6" }
notify               = { version = "8.0" }
open                 = { version = "5.3" }
paste                = { version = "1.0" }
rand                 = { version = "0.9" }
rayon                = { version = "1.10" }
regex                = { version = "1.11" }
relm4                = { version = "0.9.1" }
relm4-components     = { version = "0.9.1" }
reqwest              = { version = "0.12.15", default-features = false }
rmp-serde            = { version = "1.3" }
serde                = { version = "1.0" }
serde_json           = { version = "1.0" }
serde_repr           = { version = "0.1" }
sqlx                 = { version = "0.8" }
tokio                = { version = "1.43" }
tokio-stream         = { version = "0.1" }
tokio-tungstenite    = { version = "0.26" }
tracing              = { version = "0.1" }
tracing-subscriber   = { version = "0.3" }
unicode-segmentation = { version = "1.12" }
webkit6              = { version = "0.4" }
xz2                  = { version = "0.1" }
zbus                 = { version = "5.5", default-features = false }

[workspace.metadata.cargo-shear]
ignored = ["bzip2"]
