[package]
# description = "Dictionary and word lookup service - API types"
name        = "jmdict-furigana"
version     = "0.1.0"

authors.workspace      = true
categories.workspace   = true
edition.workspace      = true
keywords.workspace     = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
foldhash = { workspace = true }
async_zip = { workspace = true, features = ["deflate", "tokio"] }
serde        = { workspace = true, features = ["derive"] }
serde_json   = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
