[package]
description = "Generate Japanese furigana for headword/reading pairs via JmdictFurigana"
license     = "MIT OR Apache-2.0"
name        = "jmdict-furigana"
version     = "0.1.0"

authors.workspace      = true
categories.workspace   = true
edition.workspace      = true
keywords.workspace     = true
repository.workspace   = true
rust-version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
async_zip  = { workspace = true, features = ["deflate"] }
foldhash   = { workspace = true }
futures    = { workspace = true }
serde      = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
