[package]
description = "Command line client for Wordbase servers"
name = "wordbase-cli"
version = "0.1.0"

authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[features]

[dependencies]
wordbase = { workspace = true, features = ["yomitan"] }
wordbase-client-tokio = { workspace = true }

anyhow = { workspace = true, features = ["std"] }
clap = { workspace = true, default-features = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
