[package]
description = "Command line client for Wordbase servers"
name = "wordbase-cli"
version = "0.1.0"

authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[features]

[dependencies]
wordbase = { workspace = true }
wordbase-client-tokio = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
futures = { workspace = true }
tokio = { workspace = true, features = ["full"] }
