[package]
name = "wordbase-cli"
version = "0.0.0"

authors.workspace      = true
categories.workspace   = true
edition.workspace      = true
keywords.workspace     = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
wordbase = { workspace = true, features = ["desktop"] }

anyhow             = { workspace = true }
ascii_table        = { workspace = true, features = ["wide_characters"] }
clap               = { workspace = true, features = ["derive"] }
futures            = { workspace = true }
tokio              = { workspace = true, features = ["full"] }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
serde = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
itertools = { workspace = true }
