[package]
description = "Wordbase client implementation using Tokio"
name = "wordbase-client-tokio"
version = "0.1.0"

authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[features]

[dependencies]
wordbase = { workspace = true }

derive_more = { workspace = true, features = ["display", "error"] }
futures = { workspace = true, features = ["std", "async-await"] }
serde_json = { workspace = true, features = ["std"] }
tokio = { workspace = true, features = ["full"] }
tokio-tungstenite = { workspace = true, features = [
    "connect",
    "handshake",
    "rustls-tls-webpki-roots",
] }
