[package]
description = "Dictionary and word lookup service - desktop application"
name        = "wordbase-desktop"

authors.workspace      = true
categories.workspace   = true
edition.workspace      = true
keywords.workspace     = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
wordbase        = { workspace = true }
wordbase-engine = { workspace = true }

anyhow      = { workspace = true }
directories = { workspace = true }
indexmap    = { workspace = true }
maud        = { workspace = true }
notify      = { workspace = true }

bimap              = { workspace = true }
bzip2              = { workspace = true, features = ["static"] }
derive_more        = { workspace = true, features = ["display"] }
foldhash           = { workspace = true }
form_urlencoded    = { workspace = true }
futures            = { workspace = true }
glib               = { workspace = true, features = ["log"] }
gtk4               = { workspace = true, features = ["gnome_47", "blueprint"] }
open               = { workspace = true }
rand               = { workspace = true }
relm4              = { workspace = true, features = ["libadwaita", "gnome_47"] }
relm4-components   = { workspace = true }
rmp-serde          = { workspace = true }
serde              = { workspace = true, features = ["derive"] }
serde_json         = { workspace = true }
sqlx               = { workspace = true, features = ["runtime-tokio", "sqlite"] }
tokio              = { workspace = true, features = ["full"] }
tokio-util         = { workspace = true, features = ["rt"] }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
webkit6            = { workspace = true }
zbus               = { workspace = true, features = ["tokio"] }

[package.metadata.cargo-shear]
ignored = [
  "bzip2", # to enable transitive dependency features
]
