[package]
name = "wordbase-engine-cli"

authors.workspace      = true
categories.workspace   = true
edition.workspace      = true
keywords.workspace     = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[features]

[dependencies]
wordbase        = { workspace = true }
wordbase-engine = { workspace = true }

anyhow             = { workspace = true }
ascii_table        = { workspace = true, features = ["wide_characters"] }
bytes              = { workspace = true }
clap               = { workspace = true, features = ["derive"] }
futures            = { workspace = true }
tokio              = { workspace = true, features = ["full"] }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
