[package]
description = "Dictionary and word lookup service - engine implementation"
name = "wordbase-engine"
version = "0.1.0"

authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[features]
default = ["lang-jpn"]

lang-jpn = ["dep:lindera"]

[dependencies]
wordbase = { workspace = true }
wordbase-ankiconnect = { workspace = true, features = ["client-reqwest"] }

anyhow = { workspace = true }
blocking = { workspace = true }
bytes = { workspace = true }
derive_more = { workspace = true, features = ["display", "error", "from"] }
foldhash = { workspace = true }
futures = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, default-features = true }
rmp-serde = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_repr = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite"] }
tar = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tokio-stream = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
unicode-segmentation = { workspace = true }
xz2 = { workspace = true }
zip = { workspace = true }

lindera = { version = "0.40.0", optional = true, features = ["unidic"] }
