[package]
description = "Dictionary and word lookup service - engine implementation"
name        = "wordbase-engine"
version     = "0.1.0"

authors.workspace      = true
categories.workspace   = true
edition.workspace      = true
keywords.workspace     = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
wordbase = { workspace = true, features = ["render-html"] }

anyhow               = { workspace = true }
async-compression    = { workspace = true, features = ["futures-io", "xz"] }
async-tar            = { workspace = true }
async_zip            = { workspace = true, features = ["deflate"] }
blocking             = { workspace = true }
bytes                = { workspace = true }
derive_more          = { workspace = true, features = ["display", "error", "from"] }
foldhash             = { workspace = true }
futures              = { workspace = true }
indexmap             = { workspace = true }
itertools            = { workspace = true }
lindera              = { version = "0.40.0", features = ["unidic"] }
maud                 = { workspace = true }
paste                = { workspace = true }
rayon                = { workspace = true }
regex                = { workspace = true }
base64 = { workspace = true }
reqwest              = { workspace = true, default-features = true }
rmp-serde            = { workspace = true }
serde                = { workspace = true, features = ["derive"] }
serde_json           = { workspace = true }
serde_repr           = { workspace = true }
sqlx                 = { workspace = true, features = ["runtime-tokio", "sqlite"] }
tokio                = { workspace = true, features = ["sync", "macros"] }
tokio-stream         = { workspace = true }
tokio-tungstenite    = { workspace = true }
tracing              = { workspace = true }
unicode-segmentation = { workspace = true }
