[package]
description = "Dictionary and word lookup service - engine implementation"
name        = "wordbase-engine"
version     = "0.1.0"

authors.workspace      = true
categories.workspace   = true
edition.workspace      = true
keywords.workspace     = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[features]
poem-openapi = ["dep:poem-openapi"]

[dependencies]
wordbase = { workspace = true, features = ["render-html"] }

anyhow               = { workspace = true }
arc-swap             = { workspace = true }
async-compression    = { workspace = true, features = ["futures-io", "xz"] }
async-stream         = { workspace = true }
async-tar            = { workspace = true }
async_zip            = { workspace = true, features = ["deflate"] }
blocking             = { workspace = true }
bytes                = { workspace = true }
data-encoding        = { workspace = true }
directories          = { workspace = true }
either               = { workspace = true }
foldhash             = { workspace = true }
futures              = { workspace = true }
indexmap             = { workspace = true }
itertools            = { workspace = true }
lindera              = { workspace = true, features = ["unidic"] }
maud                 = { workspace = true }
paste                = { workspace = true }
poem-openapi         = { workspace = true, optional = true }
rayon                = { workspace = true }
regex                = { workspace = true }
reqwest              = { workspace = true, features = ["json"] }
rmp-serde            = { workspace = true }
serde                = { workspace = true, features = ["derive"] }
serde_json           = { workspace = true }
serde_repr           = { workspace = true }
sqlx                 = { workspace = true, features = ["runtime-tokio", "sqlite"] }
tokio                = { workspace = true, features = ["sync", "macros"] }
tokio-stream         = { workspace = true }
tokio-tungstenite    = { workspace = true }
tokio-util           = { workspace = true, features = ["rt"] }
tracing              = { workspace = true }
unicode-segmentation = { workspace = true }

derive_more = { workspace = true, features = [
  "debug",
  "from",
  "display",
  "error",
] }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
