[package]
description = "TODO"
name = "wordbase-gtk-ui"
version = "0.1.0"

authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[features]

[dependencies]
wordbase = { workspace = true }
wordbase-client-tokio = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
derive_more = { workspace = true, features = ["deref"] }
foldhash = { workspace = true }
form_urlencoded = { workspace = true }
futures = { workspace = true }
glib = { workspace = true, features = ["log"] }
gtk4 = { workspace = true, features = ["gnome_47", "blueprint"] }
interprocess = { workspace = true, features = ["tokio"] }
libadwaita = { workspace = true, features = ["v1_6"] }
open = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
webkit6 = { workspace = true }

# enable features in transitive dependency crates

bzip2 = { workspace = true, features = ["static"] }

[package.metadata.cargo-shear]
ignored = ["bzip2"]
