[package]
description = "TODO"
name = "wordbase-gtk"
version = "0.1.0"

authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[features]

[dependencies]
wordbase = { workspace = true }

foldhash = { workspace = true }
form_urlencoded = { workspace = true }
gtk4 = { workspace = true, features = ["gnome_47", "blueprint"] }
indexmap = { workspace = true }
libadwaita = { workspace = true, features = ["v1_6"] }
open = { workspace = true }
tracing = { workspace = true }
webkit6 = { workspace = true }
