[package]
description = "TODO"
name = "wordbase-html"
version = "0.1.0"

authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[features]

[dependencies]
wordbase = { workspace = true }

derive_more = { workspace = true, features = ["deref", "deref_mut"] }
foldhash = { workspace = true }
form_urlencoded = { workspace = true }
indexmap = { workspace = true }
maud = { workspace = true }
