[package]
description = "TODO"
name = "wordbase-popup-gtk"
version = "0.1.0"

authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[features]

[dependencies]
wordbase = { workspace = true }
wordbase-client-tokio = { workspace = true }

anyhow = { workspace = true, default-features = true }
derive_more = { workspace = true, features = ["deref"] }
either = { workspace = true, default-features = true }
foldhash = { workspace = true, default-features = true }
form_urlencoded = { workspace = true, default-features = true }
glib = { workspace = true, default-features = true, features = ["log"] }
gtk4 = { workspace = true, features = ["gnome_47", "blueprint"] }
indexmap = { workspace = true, default-features = true }
libadwaita = { workspace = true, features = ["v1_6"] }
log = { workspace = true }
open = { workspace = true, default-features = true }
pretty_env_logger = { workspace = true }
rand = { workspace = true, default-features = true }
serde = { workspace = true, features = ["std", "derive"] }
serde_json = { workspace = true, features = ["std"] }
tokio = { workspace = true, features = ["full"] }
webkit6 = { workspace = true, default-features = true }
