[package]
description = "TODO"
name = "wordbase-popup-gtk"
version = "0.1.0"

authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[features]

[dependencies]
wordbase = { workspace = true }
wordbase-client-tokio = { workspace = true }

anyhow = { workspace = true }
derive_more = { workspace = true, features = ["deref"] }
foldhash = { workspace = true }
form_urlencoded = { workspace = true }
futures = { workspace = true }
glib = { workspace = true, features = ["log"] }
gtk4 = { workspace = true, features = ["gnome_47", "blueprint"] }
libadwaita = { workspace = true, features = ["v1_6"] }
log = { workspace = true }
open = { workspace = true }
pretty_env_logger = { workspace = true }
tokio = { workspace = true, features = ["full"] }
webkit6 = { workspace = true }

# enable features in transitive dependency crates

bzip2 = { workspace = true, features = ["static"] }

[package.metadata.cargo-shear]
ignored = ["bzip2"]
