[package]
description = "Wordbase server implementation"
name = "wordbase-server"
version = "0.1.0"

authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[features]
default = [
    "popup",
    "dep:glib",
    "dep:gtk4",
    "dep:libadwaita",
    "dep:wordbase-gtk",
]
popup = []

[dependencies]
wordbase = { workspace = true, features = ["parse-yomitan"] }

anyhow = { workspace = true }
cfg-if = { workspace = true }
derive_more = { workspace = true, features = [
    "display",
    "error",
    "deref",
    "deref_mut",
] }
foldhash = { workspace = true }
futures = { workspace = true }
mecab = { workspace = true }
rmp-serde = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite"] }
tokio = { workspace = true, features = ["full"] }
tokio-tungstenite = { workspace = true, features = ["rustls-tls-webpki-roots"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

glib = { workspace = true, optional = true, features = ["log"] }
gtk4 = { workspace = true, optional = true, features = [
    "gnome_47",
    "blueprint",
] }
libadwaita = { workspace = true, optional = true, features = ["v1_6"] }
wordbase-gtk = { workspace = true, optional = true }

# enable features in transitive dependency crates

bzip2 = { workspace = true, features = ["static"] }

[package.metadata.cargo-shear]
ignored = ["bzip2"]
