[package]
description = "Dictionary and word lookup service - server implementation"
name        = "wordbase-server"
version     = "0.1.0"

authors.workspace      = true
categories.workspace   = true
edition.workspace      = true
keywords.workspace     = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
wordbase-engine = { workspace = true }

anyhow               = { workspace = true }
derive_more          = { workspace = true, features = ["display", "error", "from"] }
foldhash             = { workspace = true }
futures              = { workspace = true }
serde                = { workspace = true, features = ["derive"] }
serde_json           = { workspace = true }
tokio                = { workspace = true, features = ["sync"] }
unicode-segmentation = { workspace = true }
