[package]
description = "Dictionary and word lookup service - server implementation"
name        = "wordbase-server"
version     = "0.1.0"

authors.workspace      = true
categories.workspace   = true
edition.workspace      = true
keywords.workspace     = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
wordbase        = { workspace = true, features = ["poem-openapi"] }
wordbase-engine = { workspace = true }

anyhow       = { workspace = true }
async-stream = { workspace = true }
bytes        = { workspace = true }
derive_more  = { workspace = true, features = ["display", "error", "from"] }
foldhash     = { workspace = true }
futures      = { workspace = true }
poem         = { workspace = true, features = ["anyhow"] }
poem-openapi = { workspace = true, features = ["swagger-ui"] }
serde        = { workspace = true, features = ["derive"] }
serde_json   = { workspace = true }
tokio        = { workspace = true, features = ["sync"] }

[dev-dependencies]
clap               = { workspace = true, features = ["derive"] }
tokio              = { workspace = true, features = ["full"] }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
