[package]
name    = "wordbase-sys"
publish = false

authors.workspace      = true
categories.workspace   = true
edition.workspace      = true
keywords.workspace     = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[lib]
crate-type = ["cdylib"]
name       = "wordbase"

[dependencies]
# wordbase        = { workspace = true }
# wordbase-engine = { workspace = true }

# openssl = { version = "0.10", features = ["vendored"] }
uniffi = { workspace = true }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }
